--- a/K_Bridge/Views/Post/_RepliesPartial.cshtml
+++ b/K_Bridge/Views/Post/_RepliesPartial.cshtml
@@ -53,7 +53,20 @@
         </div>
     </div>
 }
-
+@if (Model.Any())
+{
+    var firstReply = Model.First();
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            @for (int i = 1; i <= firstReply.TotalPages; i++)
+            {
+                <li class="page-item @(i == firstReply.PageNumber ? "active" : "")">
+                    <a class="page-link" href="#" onclick="loadReplies(@firstReply.Reply.PostID, '@ViewBag.Sort', @i)">@i</a>
+                </li>
+            }
+        </ul>
+    </nav>
+}
 <script>
     document.addEventListener('DOMContentLoaded', (event) => {
         document.querySelectorAll('[id^="reply-like-dislike-"]').forEach(element => {
