--- a/K_Bridge/Pages/Admin/Forums/List.cshtml
+++ b/K_Bridge/Pages/Admin/Forums/List.cshtml
@@ -38,7 +38,7 @@
                 <th scope="col">Chủ đề</th>
                 <th scope="col">Số lượng bài viết</th>
                 <th scope="col">Ngày tạo</th>
-                <th scope="col">Ngày cập nhật</th>
+                <th scope="col">Trạng thái</th>
                 <th scope="col">Hành động</th>
             </tr>
         </thead>
@@ -59,35 +59,87 @@
                         </div>
                     </td>
                     <td>@topic.CreatedAt.ToString("dd/MM/yyyy")</td>
-                    <td>@(topic.UpdatedAt?.ToString("dd/MM/yyyy")??"")</td>
+
+                    <td>
+                        @if (topic.Status == "Active")
+                        {
+                            <span>Đang mở</span>
+                        }
+                        else if (topic.Status == "Inactive")
+                        {
+                            <span>Tạm khóa</span>
+                        }
+                        else
+                        {
+                            <span>Không xác định</span>
+                        }
+                    </td>
                     <td>
                         <div>
                             <button class="account-table-edit-btn" onclick="window.location.href='/Admin/Forums/Edit?id=@topic.ID'">
                                 <img src="/img/icon_edit_50.png" alt="Chỉnh sửa" width="20" height="20">
                             </button>
-                            <button class="account-table-delete-btn">
+                            <button class="account-table-delete-btn" type="button"
+                                    data-bs-toggle="modal" data-bs-target="#lockTopicModal">
                                 <img src="/img/icon_lock_50.png" alt="Khoá" width="25" height="25">
                             </button>
                         </div>
                     </td>
                 </tr>
+                <!-- Modal -->
+                <div class="modal fade modal-new-post-overall rounded-3" s style="overflow-x: hidden;" id="lockTopicModal" tabindex="-1"
+                     aria-labelledby="newPostModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" style="border-radius: 20px;">
+                        <div class="modal-content">
+                            <div class="modal-header modal-new-post-header py-2 px-3">
+                                <h5 class="modal-title text-uppercase" id="newPostModalLabel">Xác nhận</h5>
+                                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body bg-main-color-layout d-flex flex-column py-4">
+                                <div class="text-color-header  justify-content-center flex-column m-auto" style="min-height:100px;">
+                                    <p class="fs-3 text-color-header fw-bold m-0 mt-2">Bạn chắc chắn chứ?</p>
+                                    <p class="text-color-headerfw-bold m-0 p-0">Xác nhận khoá chủ đề này!</p>
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content-center bg-main-color-layout pb-4 rounded-bottom">
+                                <button type="button" class="rounded-2 px-3 py-1 btn-confirm me-1" data-bs-dismiss="modal" style="min-width:148px;">Huỷ</button>
+                                <form method="post">
+                                    <button type="submit" class="rounded-2 px-3 py-1 btn-confirm ms-1" style="min-width:148px;" asp-page-handler="Delete" asp-route-id="@topic.ID">
+                                        Khoá
+                                    </button>
+                                    <input type="hidden" name="ForumID" id="ForumID" value="@Model.ForumID" />
+
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             }
         </tbody>
     </table>
 </div>
+
 <div class="row px-5">
     <ul class="pagination justify-content-center m-0 p-0">
         <div class="d-flex account-paging">
-        <li class="page-item disabled">
-            <a class="page-link" href="#" tabindex="-1">Trước</a>
-        </li>
-        <li class="page-item active"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item"><a class="page-link" href="#">4</a></li>
-        <li class="page-item"><a class="page-link" href="#">5</a></li>
-        <li class="page-item">
-            <a class="page-link" href="#">Sau</a>
-        </li>
+            @foreach (var pages in Model.DisplayPages)
+            {
+                @if (pages == -1)
+                {
+                <li class="page-item disabled"><span class="page-link">...</span></li>
+                }
+                else if (pages == Model.PageIndex)
+                {
+                <li class="page-item active"><span class="page-link">@pages</span></li>
+                }
+                else
+                {
+                <li class="page-item"><a class="page-link" href="/Admin/Forums/List/@Model.ForumID?pageIndex=@pages">@pages</a></li>
+                }
+            }
+</div>
     </ul>
 </div>
+
