--- a/K_Bridge/Views/Post/Details.cshtml
+++ b/K_Bridge/Views/Post/Details.cshtml
@@ -106,7 +106,7 @@
 
                         @{
                             string closeAfterText = "Bình chọn sẽ đóng sau: ";
-                            switch (CloseAfter)
+                            switch (voteDetail.CloseAfter)
                             {
                                 case "day":
                                     closeAfterText += "<small class=\"fw-bold text-color-logo\">1 ngày</small>";
