Create admin acc

--- a/K_Bridge/Views/Shared/Components/AdminNavigationMenu/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/AdminNavigationMenu/Default.cshtml
@@ -53,7 +53,7 @@
     @if (role == "Mgr")
     {
         <li class="nav-item mt-2">
-            <a class="nav-link nav-link-text" href="/Admin/Manager/List">
+            <a class="nav-link nav-link-text" href="/Admin/Managers/List">
                 <img src="~/img/icon_admin_50.png" class="sidebar-icon" /> Quản trị viên
             </a>
         </li>
