--- a/K_Bridge/Pages/Admin/Managers/List.cshtml
+++ b/K_Bridge/Pages/Admin/Managers/List.cshtml
@@ -24,7 +24,7 @@
         <div class="account-subtitle">Quản lý tài khoản quản trị</div>
     </div>
     <div class="col-9 d-flex justify-content-end align-items-center custom-cursor-pointer">
-        <div class=" account-create-button px-4 h-75 d-flex align-items-center" onclick="window.location.href='/Admin/Manager/Create'">
+        <div class=" account-create-button px-4 h-75 d-flex align-items-center" onclick="window.location.href='/Admin/Managers/Create'">
             + Tạo tài khoản
         </div>
     </div>
