--- a/K_Bridge/Pages/Admin/Managers/List.cshtml
+++ b/K_Bridge/Pages/Admin/Managers/List.cshtml
@@ -77,7 +77,7 @@
                     </td>
                     <td>
                         <div>
-                            <button class="account-table-edit-btn" onclick="window.location.href='/Admin/Accounts/Edit'">
+                            <button class="account-table-edit-btn" onclick="window.location.href='/Admin/Managers/Edit?id=@account.ID'">
                                 <img src="/img/icon_edit_50.png" alt="Chỉnh sửa" width="20" height="20">
                             </button>
                             <button class="account-table-delete-btn"
