--- a/K_Bridge/Pages/Admin/Managers/Edit.cshtml
+++ b/K_Bridge/Pages/Admin/Managers/Edit.cshtml
@@ -51,7 +51,7 @@
         <div class="col-5">
             <div class="form-group mb-3">
                 <label class="create-form-title" for="Password">Mật khẩu</label>
-                <input type="password" class="form-custom" id="Password" name="Password" placeholder="******" required>
+                <input type="password" class="form-custom" id="Password" name="Password" placeholder="******">
             </div>
             <div class="form-group mb-3">
                 <label class="create-form-title" for="Avatar">Ảnh đại diện</label>
