--- a/K_Bridge/Views/User/Index.cshtml
+++ b/K_Bridge/Views/User/Index.cshtml
@@ -91,23 +91,23 @@
     <div class="d-flex justify-content-between mt-5">
         <p class="text-color-header fw-bold fs-5 ">Bài chủ đề hàng đầu</p>
     </div>
-    <div class="top-posts-container" style="height: 300px; overflow-y: auto; overflow-x:hidden">
+    <div class="top-posts-container px-3" style="height: 300px; overflow-y: auto; overflow-x:hidden;">
     @foreach (var post in ViewBag.TopPosts)
     {
 
-        <div class="rounded-3 p-3 d-flex align-content-center justify-content-around row" style="border: 1px solid #FFbe98;">
+        <div class="rounded-3 p-3 d-flex align-content-center justify-content-around row my-1" style="border: 1px solid #FFbe98;">
             <div class="mx-3 align-content-center col-2">
                     @if (post.Status == "Approved")
                     {
-                        <img src="~/img/help_chat_good.png" alt="Help Chat" width="20" />
+                        <img src="~/img/help_chat_good.png" alt="Help Chat" width="30" data-bs-toggle="tooltip" data-bs-placement="top" title="Đã được duyệt" />
                     }
                     else if (post.Status == "Rejected")
                     {
-                        <img src="~/img/help_chat_bad.png" alt="Help Chat" width="20" />
+                        <img src="~/img/help_chat_bad.png" alt="Help Chat" width="30" data-bs-toggle="tooltip" data-bs-placement="top" title="Không được duyệt" />
                     }
                     else
                     {
-                        <img src="~/img/help_chat.png" alt="Help Chat" width="20" />
+                        <img src="~/img/help_chat.png" alt="Help Chat" width="30" data-bs-toggle="tooltip" data-bs-placement="top" title="Đang chờ duyệt" />
                     }
             </div>
                 <div class="d-flex rounded-3 align-items-center justify-content-center col-1"
@@ -258,3 +258,10 @@
 
 
 
+<script>
+    // Initialize tooltips
+    var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+    var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+        return new bootstrap.Tooltip(tooltipTriggerEl)
+    })
+</script>
