--- a/K_Bridge/Views/Post/Details.cshtml
+++ b/K_Bridge/Views/Post/Details.cshtml
@@ -149,8 +149,6 @@
 
                 </div>
             }
-
-
             <div class="reply-content">
                 @Html.Raw(ViewBag.Post.Content)
             </div>
@@ -199,13 +197,15 @@
                     <partial name="_RepliesPartial" model="ViewBag.RepliesWithLike" />
                 </div>
             }
-            <div>
-                <p class="fs-5 text-color-logo">
-                    Câu trả lời của bạn:
-                </p>
-            </div>
-            <form method="post" asp-action="SubmitReply">
-                <input type="hidden" name="postId" value="@ViewBag.Post.ID" />
+              @if (ViewBag.CurrentUser != null && ViewBag.Post != null && ViewBag.CurrentUser.ID != null)
+            {
+                <div>
+                    <p class="fs-5 text-color-logo">
+                        Câu trả lời của bạn:
+                    </p>
+                </div>
+                <form method="post" asp-action="SubmitReply">
+                    <input type="hidden" name="postId" value="@ViewBag.Post.ID" />
 
                 <div class="border-2 rounded-3 border-main-color-header p-2 text-color-logo">
                     <div class="d-flex col-lg-3 justify-content-evenly fs-5">
@@ -240,11 +240,13 @@
 
                     </div>
                 </div>
-                <div class="d-flex justify-content-end mt-2">
-                    <button type="submit" class="m-2 px-3 py-2 bg-main-color-layout text-color-logo rounded-3">Đăng câu trả lời của bạn</button>
-                </div>
-            </form>
+              
+                    <div class="d-flex justify-content-end mt-2">
+                        <button type="submit" class="m-2 px-3 py-2 bg-main-color-layout text-color-logo rounded-3">Đăng câu trả lời của bạn</button>
+                    </div>
 
+            </form>
+            }
             <div class="position-fixed top-0 end-0 p-3" style="z-index: 11">
                 <div id="liveToastDetail" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
                     <div class="toast-body text-color-background fw-bold text-center rounded-bottom rounded-3" style="background-color: #493422; border: 2px solid #FFF0E6;">
