--- a/K_Bridge/Views/Home/Index.cshtml
+++ b/K_Bridge/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
     if (username == null)
     {
         username = "người dùng";
-        welcomeText = "Bạn đang đăng nhập với vai trò tài khoản khách vãng lai. Đbăng nhập tài khoản để có thể đăng bài và bình luận trên các diễn đàn.";
+        welcomeText = "Bạn đang đăng nhập với vai trò tài khoản khách vãng lai. Đăng nhập tài khoản để có thể đăng bài và bình luận trên các diễn đàn.";
     }
     else
     {
