--- a/K_Bridge/Views/Home/Searching.cshtml
+++ b/K_Bridge/Views/Home/Searching.cshtml
@@ -22,7 +22,7 @@
 {
     foreach (var post in searchResults)
     {
-        <div class="row my-3" style="border-bottom: 1px solid #493422">
+        <div class="row my-3" style="border-bottom: 1px solid #493422" onclick="window.location.href='/Post/Details?post=@post.ID'">
             <div class="col-2 d-flex flex-column justify-content-center">
                 <div class="newest-card-stat py-2">@(post.Replies?.Count() ?? 0) Câu trả lời</div>
                 <div class="newest-card-stat py-2">@post.ViewCount Lượt xem</div>
