--- a/K_Bridge/Views/Post/_RepliesPartial.cshtml
+++ b/K_Bridge/Views/Post/_RepliesPartial.cshtml
@@ -1,6 +1,6 @@
-﻿@model IEnumerable<K_Bridge.Models.ViewModels.ReplyViewModel>
-
-@foreach (var reply in Model)
+﻿@* @model IEnumerable<K_Bridge.Models.ViewModels.ReplyViewModel> *@
+@model ReplyPaginationViewModel
+@foreach (var reply in Model.Replies)
 {
     <div class="row my-3 m-0" style="border-bottom: 1px solid #8E6745">
         <div class="col-lg-1 flex-column">
@@ -53,15 +53,16 @@
         </div>
     </div>
 }
-@if (Model.Any())
+
+
+@if (Model.TotalPages > 1)
 {
-    var firstReply = Model.First();
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
-            @for (int i = 1; i <= firstReply.TotalPages; i++)
+            @for (int i = 1; i <= Model.TotalPages; i++)
             {
-                <li class="page-item @(i == firstReply.PageNumber ? "active" : "")">
-                    <a class="page-link" href="#" onclick="loadReplies(@firstReply.Reply.PostID, '@ViewBag.Sort', @i)">@i</a>
+                <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
+                    <a class="page-link" href="javascript:void(0);" onclick="loadReplies(@Model.PostId, '@Model.Sort', @i)">@i</a>
                 </li>
             }
         </ul>
@@ -192,4 +193,17 @@
     // Thực hiện xóa bình luận ở đây
     $('#deleteCommentModal').modal('hide');
   }
+
+
+function loadReplies(postId, sort, page) {
+    $.ajax({
+        url: '/Post/GetReplies',
+        data: { postId: postId, sort: sort, page: page },
+        type: 'GET',
+        success: function(result) {
+            $('#repliesContainer').html(result);
+        }
+    });
+}
+}
     </script>
