--- a/K_Bridge/Views/Post/_RepliesPartial.cshtml
+++ b/K_Bridge/Views/Post/_RepliesPartial.cshtml
@@ -23,7 +23,8 @@
         </div>
         <div class="col-lg-11">
             <div class="d-flex justify-content-end">
-                @if (ViewBag.CurrentUser.ID != null && reply.Reply.UserID == ViewBag.CurrentUser.ID)
+               
+                @if (ViewBag.CurrentUser != null && reply.Reply.UserID == ViewBag.CurrentUser.ID)
                 {
                     <button class="p-2 btn-point rounded-2" onclick="showDeleteCommentModal(@reply.Reply.ID)">
                         <img src="~/img/icon_trash_50.png" height="20" width="20" alt="thr point" />
@@ -74,6 +75,8 @@
         </ul>
     </nav>
 }
+
+<!--Like/dislike-->
 <script>
     document.addEventListener('DOMContentLoaded', (event) => {
         document.querySelectorAll('[id^="reply-like-dislike-"]').forEach(element => {
@@ -95,12 +98,12 @@
     function lidiReply(inst) {
         // (A) ATTACH HTML
         inst.target.innerHTML = `
-                    <span id="reply-like-count-${inst.replyId}" style="display:none">${inst.likeCount}</span>
-                    <i class="up" onclick="likeReply(${inst.replyId})"></i>
-                    <p class="mt-2 fs-5 fw-bold text-color-logo">${inst.likeCount - inst.dislikeCount}</p>
-                    <i class="down" onclick="dislikeReply(${inst.replyId})"></i>
-                    <span id="reply-dislike-count-${inst.replyId}" style="display:none">${inst.dislikeCount}</span>
-                `;
+                            <span id="reply-like-count-${inst.replyId}" style="display:none">${inst.likeCount}</span>
+                            <i class="up" onclick="likeReply(${inst.replyId})"></i>
+                            <p class="mt-2 fs-5 fw-bold text-color-logo">${inst.likeCount - inst.dislikeCount}</p>
+                            <i class="down" onclick="dislikeReply(${inst.replyId})"></i>
+                            <span id="reply-dislike-count-${inst.replyId}" style="display:none">${inst.dislikeCount}</span>
+                        `;
 
         inst.target.classList.add("lidi");
         inst.up = inst.target.querySelector("i.up");
@@ -187,8 +190,8 @@
                 }
             })
             .catch(error => console.error('Error:', error));
-    }</script>
-
+    }
+</script>
 
 <script>
     function showDeleteCommentModal(replyId) {
@@ -211,7 +214,7 @@
             .then(response => response.json())
             .then(data => {
                 if (data.success) {
-                    responseSummary.innerHTML = '<p>Xoá bình luận thành công.</p>';
+                    responseSummary.innerHTML = '<div>Xoá bình luận thành công.</div>';
                     responseSummary.style.display = 'block';
                     showToast('liveToastDetail');
 
@@ -220,35 +223,35 @@
                 }
                 else {
                     if (data.messages != null) {
-                        responseSummary.innerHTML = `<p>${data.messages}</p>`;
+                        responseSummary.innerHTML = `<div>${data.messages}</div>`;
                         responseSummary.style.display = 'block';
                         showToast('liveToastDetail');
                     } else {
-                        responseSummary.innerHTML = '<p>Có lỗi xảy ra trong quá trình xử lý.</p>';
+                        responseSummary.innerHTML = '<div>Có lỗi xảy ra trong quá trình xử lý.</div>';
                         responseSummary.style.display = 'block';
                         showToast('liveToastDetail');
 
-                        setTimeout(() => {}, 2000);
+                        setTimeout(() => { }, 2000);
                     }
                 }
             })
             .catch(error => console.error('Error:', error));
     }
+   </script>
 
-  function deleteComment() {
-    // Thực hiện xóa bình luận ở đây
-    $('#deleteCommentModal').modal('hide');
-  }
-
-
-function loadReplies(postId, sort, page) {
-    $.ajax({
-        url: '/Post/GetReplies',
-        data: { postId: postId, sort: sort, page: page },
-        type: 'GET',
-        success: function(result) {
-            $('#repliesContainer').html(result);
-        }
+@* <script>
+    $(document).ready(function () {
+        loadReplies(@Model.PostId, '@Model.Sort', 1); // Gọi trang đầu tiên khi tải
     });
-}
-    </script>
+    function loadReplies(postId, sort, page) {
+        console.log("loadReplies called with:", postId, sort, page);
+        $.ajax({
+            url: '/Post/GetReplies',
+            data: { postId: postId, sort: sort, page: page },
+            type: 'GET',
+            success: function (result) {
+                $('#repliesContainer').html(result);
+            }
+        });
+    }
+</script> *@
