--- a/K_Bridge/Views/User/EditPhoneNum.cshtml
+++ b/K_Bridge/Views/User/EditPhoneNum.cshtml
@@ -9,19 +9,17 @@
             <h2 class="text-color-header mb-4">Cập nhật Số điện thoại</h2>
             <p class="fs-12 text-color-header">Nhập tên đăng nhập và mật khẩu hiện tại.</p>
 
+
             <div class="position-fixed top-0 end-0 p-3" style="z-index: 11">
                 <div id="liveToastEditPhoneNum" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-                    <div class="toast-header bg-main-color-header">
-                        <img src="~/img/Logo_75.png" height="20" width="20" class="rounded me-2" alt="...">
-                        <strong class="me-auto kbridge-text text-color-header spacing-2">K-Bridge</strong>
-                        <small>Ngay bây giờ</small>
-                        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-                    </div>
-                    <div class="toast-body bg-main-color-background text-color-logo">
+                    <div class="toast-body text-color-background fw-bold text-center rounded-bottom rounded-3"
+                         style="background-color: #493422; border: 2px solid #FFF0E6;">
                         <div id="editPhoneNumValidationSummary"></div>
                     </div>
                 </div>
             </div>
+
+
 
             <form asp-action="EditPhoneNum" method="post" id="editPhoneNumForm">
 
@@ -68,7 +66,7 @@
             .then(response => response.json())
             .then(data => {
                 if (data.success) {
-                    errorSummary.innerHTML = '<p>Cập nhật thành công.</p>';
+                    errorSummary.innerHTML = '<div>Cập nhật thành công.</div>';
                     errorSummary.style.display = 'block';
                     showToast('liveToastEditPhoneNum');
                     setTimeout(() => {
@@ -77,7 +75,7 @@
 
                 } else {
                     if (data.errors && data.errors.length > 0) {
-                        var p = document.createElement('p');
+                        var p = document.createElement('div');
                         data.errors.forEach(function (error) {
                             p.textContent = error;
                         });
@@ -85,7 +83,7 @@
                         errorSummary.style.display = 'block';
                         showToast('liveToastEditPhoneNum');
                     } else {
-                        errorSummary.innerHTML = '<p>Có lỗi xảy ra trong quá trình xử lý.</p>';
+                        errorSummary.innerHTML = '<div>Có lỗi xảy ra trong quá trình xử lý.</div>';
                         errorSummary.style.display = 'block';
                         showToast('liveToastEditPhoneNum');
                     }
