Fix before demo

--- a/K_Bridge/Views/User/EditProfile.cshtml
+++ b/K_Bridge/Views/User/EditProfile.cshtml
@@ -57,7 +57,7 @@
                         {
                             <img width="100" height="100"
                                  src="~/img/avatar_default.png" id="avatar-preview" class="img-fluid rounded-3 position-absolute"
-                                 style="border-width: 10px; border-color: #FFBE98; top:-40px; left:45px; object-fit: cover;"
+                                 style="border-width: 10px; border-color: #FFBE98; background-color: #FFBE98; top:-40px; left:45px; object-fit: cover;"
                                  alt="Avatar">
                         }
                         else
