--- a/K_Bridge/Pages/Admin/Forums/Topics/List.cshtml
+++ b/K_Bridge/Pages/Admin/Forums/Topics/List.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="row account-navigate mt-3 px-5 align-items-center ">
-    <div class="col-4 d-flex justify-content-star">
+    <div class=" d-flex justify-content-star">
         <img src="/img/icon_dashboard_50_dark.png"
              onclick="window.location.href='/Admin/Dashboard'"
              class="account-navigate-icon mt-2 custom-cursor-pointer" alt="Tổng quan">
