--- a/K_Bridge/Views/Shared/Components/LayoutStatList/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/LayoutStatList/Default.cshtml
@@ -2,7 +2,7 @@
     <div class="bg-main-color-background h-100 w-100"></div>
     <h5 class="text-color-logo mt-4">Thống kê</h5>
     <div class="container">
-        <div class="row align-items-center cursor">
+        <div class="row align-items-center ">
             <div class="col-auto p-0 my-2">
                 <img class="p-0 m-0 w-32 h-auto mt-2 img-fluid" src="~/img/Stats_Topic.png" alt="Topic" />
             </div>
@@ -18,7 +18,7 @@
     </div>
 
     <div class="container">
-        <div class="row align-items-center cursor">
+        <div class="row align-items-center">
             <div class="col-auto p-0 my-2">
                 <img class="p-0 m-0 w-32 h-auto mt-2 img-fluid" src="~/img/Stats_Post.png" alt="Post" />
             </div>
@@ -34,7 +34,7 @@
     </div>
 
     <div class="container">
-        <div class="row align-items-center cursor">
+        <div class="row align-items-center">
             <div class="col-auto p-0 my-2">
                 <img class="p-0 m-0 w-32 h-auto mt-2 img-fluid" src="~/img/Stats_Account.png" alt="Account" />
             </div>
